Fix for header being cropped
Closes-bug: #1436184

--- a/nailgun/static/css/styles.less
+++ b/nailgun/static/css/styles.less
@@ -3649,7 +3649,6 @@ form.create-cluster-form {
       line-height: 30px;
       max-width: 550px;
       overflow: hidden;
-      word-break: break-all;
       margin: 0 0 0 8px !important;
     }
   }
